--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Telegram от А до Я — Освой и монетизируй свой канал</title>
-    <meta name="description" content="Пошаговый курс по созданию, настройке и монетизации Telegram-канала для экспертов, блогеров и предпринимателей" />
-    <meta name="author" content="Telegram от А до Я" />
+    
+    <!-- 1. ОСНОВНОЙ ЗАГОЛОВОК ВКЛАДКИ -->
+    <title>Сила в Деле — Курс по Telegram для бизнеса</title>
+    <meta name="description" content="Пошаговая программа запуска и монетизации Telegram-канала. От создания до первых продаж." />
+    <meta name="author" content="Сергей Силантьев" />
+
+    <!-- 2. ПОДКЛЮЧЕНИЕ ШРИФТА MONTSERRAT (Мы используем его в дизайне) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Telegram от А до Я — Освой и монетизируй свой канал" />
-    <meta property="og:description" content="Пошаговый курс по созданию, настройке и монетизации Telegram-канала" />
+    <!-- 3. OPEN GRAPH (Картинка для Telegram, WhatsApp, VK) -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://silavdele.ru/" /> <!-- Поменяешь на свой домен, когда он будет -->
+    <meta property="og:title" content="Сила в Деле — Курс по Telegram для бизнеса" />
+    <meta property="og:description" content="Пошаговая программа запуска и монетизации Telegram-канала. От создания до первых продаж." />
+    
+    <!-- Ссылка на картинку в папке public -->
+    <meta property="og:image" content="/og-image.png" />
 
+    <!-- 4. TWITTER CARD -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Telegram" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Сила в Деле — Курс по Telegram для бизнеса" />
+    <meta name="twitter:description" content="Пошаговая программа запуска и монетизации Telegram-канала. От создания до первых продаж." />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
